--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@prisma/client": "^5.18.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.4.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.23",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
+    "next-cloudinary": "^6.10.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
