--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.4.0",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.23",
     "next": "14.2.5",
