--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,8 @@ AUTH_SECRET = 'somethingreallyreallysecret'
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME = "your cloud name"
 NEXT_PUBLIC_CLOUDINARY_API_KEY = 'your api key'
 CLOUDINARY_API_SECRET = 'api secret'
+
+
+NEXT_PUBLIC_PUSHER_APP_KEY = "pusher key"
+PUSHER_APP_ID = "pusher app id"
+PUSHER_SECRET = "pusher secret"
