--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,12 @@ CLOUDINARY_API_SECRET = 'api secret'
 NEXT_PUBLIC_PUSHER_APP_KEY = "pusher key"
 PUSHER_APP_ID = "pusher app id"
 PUSHER_SECRET = "pusher secret"
+
+RESEND_API_KEY="your resend api key"
+
+GITHUB_CLIENT_ID = 'github client id'
+GITHUB_CLIENT_SECRET = 'github client secret'
+
+
+GOOGLE_CLIENT_ID = 'github client id'
+GOOGLE_CLIENT_SECRET = 'github client secret'
