--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.23",
-    "next": "14.2.5",
+    "next": "^14.2.6",
     "next-auth": "^5.0.0-beta.20",
     "next-cloudinary": "^6.10.0",
     "pusher": "^5.2.0",
@@ -29,12 +29,13 @@
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "react-toastify": "^10.0.5",
+    "resend": "^4.0.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20",
+    "@types/node": "^20.16.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
@@ -43,7 +44,7 @@
     "prisma": "^5.18.0",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5.5.4"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
